[package]
name = "graphene"
version = "0.2.0"
authors = ["Rafał Wojdyła <omeg@invisiblethingslab.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
base64 = "0.11"
byteorder = "1.3"
hex = "0.4"
http = "0.2"
hyper = "0.13"
hyper-tls = "0.4"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
thiserror = "1.0"
