[package]
name = "graphene-sgx"
version = "0.3.3"
authors = ["Rafał Wojdyła <omeg@invisiblethingslab.com>"]
description = "Rust API for Graphene/SGX"
homepage = "https://github.com/golemfactory/graphene-rust"
repository = "https://github.com/golemfactory/graphene-rust"
license = "LGPL-3.0"
edition = "2018"

[features]
default = []
verbose = []
ias = ["http", "hyper/http1", "hyper-tls"]

[dependencies]
anyhow = "1.0"
base64 = "0.11"
byteorder = "1.3"
chrono = "0.4"
field-offset = "0.3.4"
hex = "0.4"
http = { version = "0.2", optional = true }
hyper = { version = "0.14", optional = true }
hyper-tls = {version = "0.5", optional = true }
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
lazy_static = { version = "1.4" }
